# multiplayer-game-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/core/: application.hpp  configuration.hpp
include/network/: data_received_event.hpp  packet.hpp  tcp_connection.hpp  tcp_listener.hpp  tcp_listener_interface.hpp  tcp_listener_websocket.hpp  tcp_listener_ws.hpp  tcp_server.hpp  tcp_session.hpp  tcp_session_http.hpp  tcp_session_interface.hpp  tcp_session_websocket.hpp  tcp_session_ws.hpp
include/rooms/: room_interface.hpp  server_rooms.hpp  text_room.hpp  voice_room.hpp
include/ui/: command.hpp  command_executor.hpp  command_observer.hpp  command_registry.hpp
include/ui/command_executors/: ping_command_executor.hpp
include/utils/: event_base.hpp  factory.hpp  observable.hpp  observer.hpp
src/core/: application.cpp  configuration.cpp
src/network/: data_received_event.cpp  packet.cpp  tcp_connection.cpp  tcp_listener.cpp  tcp_listener_interface.cpp  tcp_listener_websocket.cpp  tcp_listener_ws.cpp  tcp_server.cpp  tcp_session.cpp  tcp_session_http.cpp  tcp_session_interface.cpp  tcp_session_websocket.cpp  tcp_session_ws.cpp
src/rooms/: room_interface.cpp  server_rooms.cpp  text_room.cpp  voice_room.cpp
src/ui/: command.cpp  command_executor.cpp  command_observer.cpp  command_registry.cpp
src/utils/: observable.cpp
tests/: CMakeLists.txt  ConfigurationTests.cpp  Google_Tests_server_run  Makefile  cmake_install.cmake  server_google_tests.cbp
tests/lib/: googletest-distribution.cbp
tests/lib/googlemock/: gmock.cbp
tests/lib/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h  gmock-spec-builders.h
tests/lib/googlemock/include/gmock/internal/: gmock-internal-utils.h
tests/lib/googlemock/test/: gmock-actions_test.cc  gmock-generated-actions_test.cc  gmock-matchers_test.cc
tests/lib/googletest/: gtest.cbp
tests/lib/googletest/include/gtest/: gtest.h
tests/lib/googletest/include/gtest/internal/: gtest-port.h
tests/lib/googletest/src/: gtest-port.cc  gtest.cc
tests/lib/googletest/test/: googletest-death-test-test.cc  gtest_unittest.cc
